[package]
name = "lag-test"
version = "0.1.0"
authors = ["newpavlov <newpavlov@gmail.com>"]
edition = "2018"
authors = ["Artyom Pavlov<newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple input lag testing application"

[dependencies]
vulkano = "0.11"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
winit = "0.18"
structopt = "0.2"
structopt-derive = "0.2"
